--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -8,7 +8,10 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
     </form>
-    <img src="">
-    <img src="">
+    <div class="right">
+        <img class="icon playlist" src="../../assets/playlist.png">
+        <img class="icon user" src="../../assets/user.png">
+    </div>
+    
 </nav>
 
