--- a/frontend/src/variable.scss
+++ b/frontend/src/variable.scss
@@ -2,3 +2,4 @@ $backgroundcolor: #1D1E26;
 $degradeviolet: linear-gradient(#8C5CF2, #937AC9);
 $violetbouton: #8C5CF2;
 $boutongris: #E2E2E2;
+$rose: #C10097;
