--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -9,8 +9,8 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
     </form>
     <div class="right">
-        <img class="icon playlist" src="../../assets/playlist.png">
-        <img class="icon user" src="../../assets/user.png">
+        <a href="#"><i class="bi bi-music-note-list"></i></a>
+        <a href="#"><i class="bi bi-person-fill"></i></a>
     </div>
     
 </nav>
