Début test getvideos dans composant video

--- a/frontend/src/app/video/video.component.html
+++ b/frontend/src/app/video/video.component.html
@@ -1,1 +1,6 @@
 <p>video works!</p>
+<div class="parent">
+    <ul>
+        <li *ngFor="let video of listeVideos">{{ video.title }}</li>
+    </ul>
+</div> 
