--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -7,7 +7,7 @@
     <div class="connexion"> 
         <div class="connexion-container">
             <div class="form-group">
-                <input [(ngModel)]="mail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                <input [(ngModel)]="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
             </div>
             <div class="form-group">
                 <input [(ngModel)]="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
