--- a/frontend/src/app/video/video.component.scss
+++ b/frontend/src/app/video/video.component.scss
@@ -1,10 +1,4 @@
-.parent {
+.grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    }
-    
-    .div1 { grid-area: 1 / 1 / 3 / 5; }
-    
+    grid-template-columns: 2fr 1fr; /* Create 2 columns and auto-place rows */
+}
