--- a/frontend/src/app/zoomvideo/zoomvideo.component.html
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.html
@@ -1,2 +1,5 @@
-<img src={{zoom_video.thumbnail}}>
-<p>{{zoom_video.title}}</p>
+<b:if cond='{{videozoom.platform}} == "YouTube"'>
+    <iframe title="YouTube video player" width="650" height="390" src={{urlVideoYoutube}} frameborder="0" allowfullscreen></iframe>
+    <b:else/>
+        <iframe src={{urlVideoVimeo}} width="320" height="240" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</b:if>
