--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -2,6 +2,7 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 .navbar{
+    z-index: 10;
     justify-content: left;
     background: linear-gradient(#702DFF,#937AC9);
     a{
