--- a/frontend/src/app/zoomvideo/zoomvideo.component.html
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.html
@@ -1,5 +1,2 @@
-<b:if cond='{{videozoom.platform}} == "YouTube"'>
-    <iframe title="YouTube video player" width="650" height="390" src={{urlVideoYoutube}} frameborder="0" allowfullscreen></iframe>
-    <b:else/>
-        <iframe src={{urlVideoVimeo}} width="320" height="240" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</b:if>
+<iframe title="YouTube" width="650" height="390" src="{{newUrlVideo}}" frameborder="0" allowfullscreen></iframe>
+
