--- a/frontend/src/app/zoomvideo/zoomvideo.component.html
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.html
@@ -1,2 +1,2 @@
-<iframe title="YouTube" width="650" height="390" src="{{newUrlVideo}}" frameborder="0" allowfullscreen></iframe>
+<iframe title="YouTube" width="650" height="390" [src]="url | safe" frameborder="0" allowfullscreen></iframe>
 
