--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -7,14 +7,14 @@
     <div class="connexion"> 
         <div class="connexion-container">
             <div class="form-group">
-                <input [(ngModel)]="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                <input [(ngModel)]="email" class="form-control" id="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" type="email" required>
             </div>
             <div class="form-group">
                 <input [(ngModel)]="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
             </div>
             <div style = "margin-top: 10px; margin-left: 10px" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
             <button (click)="affichage()" type="submit" class="btn btn-primary">Se connecter</button>
-            <p>Vous n’avez pas de compte ? <a href="#">S’inscrire.</a></p>
+            <p>Vous n’avez pas de compte ? <a [routerLink]="['/inscription']">S’inscrire.</a></p>
         </div>
     </div> 
 </div>
