--- a/frontend/src/app/zoomvideo/zoomvideo.component.scss
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.scss
@@ -1,4 +1,37 @@
+@import "../../variable.scss";
 
-p{
+.zoom_video{
+    display: flex;
+    margin-top: 1rem;
+    width: 100%;
+    padding: 1.5rem;
+    position: relative;
+    iframe{
+        width: 65%;
+        margin-right: 1rem;
+    }
+}
+
+h2{
+    position: absolute;
+    width: 35%;
     color: white;
+    bottom: 40%;
+    right: 0;
+    padding-left: 1rem;
+}
+
+.btn{
+    background: $violetbouton;
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
+    width: 10%;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    transition: 0.3s;
+}
+
+.btn:hover{
+    background-color:$hoverbouton;
 }
