--- a/frontend/src/variable.scss
+++ b/frontend/src/variable.scss
@@ -1,5 +1,6 @@
 $backgroundcolor: #1D1E26;
 $degradeviolet: linear-gradient(#8C5CF2, #937AC9);
 $violetbouton: #8C5CF2;
+$hoverbouton:#702DFF;
 $boutongris: #E2E2E2;
 $rose: #C10097;
