--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,6 +4,7 @@
 html,body{
     background: $backgroundcolor !important;
     height: 100vh;
+    width: 100%;
 }
 
 /* Importing Bootstrap SCSS file. */
