--- a/frontend/src/app/user/user.component.scss
+++ b/frontend/src/app/user/user.component.scss
@@ -4,22 +4,22 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    text-align: center;
+    margin:0;
+    max-width: 100%;
 }
 
 .profil{
     width: 50%;
     padding: 2rem;
+    padding-right: 2rem;
     button{
-        width: 100%;
+        width: 40%;
         background-color: $violetbouton;
         border: none;
         margin-bottom: 1rem;
         margin-top: 0.5rem;
         transition: 0.3s;
+        height: 50px;
     }
     button:hover{
         background-color: #A680F8;
@@ -44,12 +44,13 @@
     width: 50%;
     padding: 2rem;
     button{
-        width: 100%;
+        width: 40%;
         background-color: $violetbouton;
         border: none;
         margin-bottom: 1rem;
         margin-top: 0.5rem;
         transition: 0.3s;
+        height: 50px;
     }
     button:hover{
         background-color: #A680F8;
@@ -68,4 +69,18 @@
     input::placeholder {
         color: $violetbouton;
     }      
+}
+h2{
+    color: white;
+    text-align: left;
+    margin-bottom: 2rem;
+}
+
+.form-group {
+    width: 70%;
+    input{
+        height: 50px;
+        margin-bottom: 2rem;
+        border-radius: 5px !important;
+    }
 }
