correction placement de text playlist

--- a/frontend/src/app/playlist/playlist.component.scss
+++ b/frontend/src/app/playlist/playlist.component.scss
@@ -29,7 +29,7 @@ h2{
     }
     p{
         position: absolute;
-        right: 25%;
+        left: 400px;
         bottom: 40%;
     }
     .icone{
