modif style navbar

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light">
     <a class="navbar-brand" href="#">
         <img src="../../assets/Image1.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        WatchIt
+        <p>WatchIt</p>
     </a>
     <form class="form-inline">
         <input [(ngModel)]="searchword" name = "searchword" class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Search">
