--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -2,12 +2,8 @@
 <nav class="navbar navbar-light">
     <a class="navbar-brand" href="#">
         <img src="../../assets/Image1.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        WatchIt
+        <p>WatchIt</p>
     </a>
-    <!-- <form class="form-inline">
-        <input [(ngModel)]="searchword" name = "searchword" class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Search">
-        <button (click)="affichage()" class="btn btn-outline-success my-2 my-sm-0" type="submit" >Rechercher</button>
-    </form> -->
     <div class="right">
         <a [routerLink]="['/playlistpage']"><i class="bi bi-music-note-list"></i></a>
         <a [routerLink]="['/userpage']"><i class="bi bi-person-fill"></i></a>
