--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -6,8 +6,13 @@
     justify-content: left;
     background: linear-gradient(#702DFF,#937AC9);
     a{
-        color: white;
-        font-weight: 600;
+        display: flex;
+        p{
+            color: white;
+            font-weight: 600;
+            margin:auto;
+            padding-left: 5px;
+        }
     }
     .right{
         .bi{
@@ -16,7 +21,7 @@
             height: auto;
             margin-left: 2rem;
             color: white;
-            padding: 0.5rem 1rem 0.5rem 1rem;
+            padding: 1rem 1rem 1rem 1rem;
         }
         .bi-music-note-list{
             right: 4rem;
