--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#">
+    <a [routerLink]="['/home']" class="navbar-brand" href="#">
         <img src="../../assets/Image1.png" width="30" height="30" class="d-inline-block align-top" alt="">
         <p>WatchIt</p>
     </a>
