--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="#">
+    <a [routerLink]="['/home']" class="navbar-brand" href="#">
         <img src="../../assets/Image1.png" width="30" height="30" class="d-inline-block align-top" alt="">
         <p>WatchIt</p>
     </a>
