--- a/frontend/src/app/playlist/playlist.component.html
+++ b/frontend/src/app/playlist/playlist.component.html
@@ -1,14 +1,18 @@
 <app-navbar></app-navbar>
 <h2>{{titleplaylist}} :</h2>
 <ng-container *ngFor="let video of playlist">
-    <div class="card" >
-        <img class="photo" src={{video.thumbnail}}>
-        <p>{{video.title}}</p>
-        <div class="icone">
-            <i class="bi bi-pencil-square"></i>
-            <i class="bi bi-trash"></i>
+    <a [routerLink]="['/video', video.id + '-' + video.provider]">
+        <div class="card" >
+            <img class="photo" src={{video.thumbnail}}>
+            <h3>{{video.title}}</h3>
+            <p>{{video.channel}}</p>
+            <!-- <p>{{video.date}}</p> -->
+            <div class="icone">
+                <i class="bi bi-pencil-square"></i>
+                <i class="bi bi-trash"></i>
+            </div>
         </div>
-    </div>
+    </a>
 </ng-container>
 
 
