--- a/frontend/src/app/playlist/playlist.component.scss
+++ b/frontend/src/app/playlist/playlist.component.scss
@@ -7,7 +7,9 @@ h2{
     padding: 2rem;
     color: white;
 }
-
+a{
+    color: black;
+}
 .card{
     position: relative;
     margin: auto;
@@ -27,10 +29,15 @@ h2{
         height: auto;
         border: solid 1px black;
     }
-    p{
+    h3{
         position: absolute;
         left: 400px;
         bottom: 40%;
+    }
+    p{
+        position: absolute;
+        left: 400px;
+        bottom: 1rem;
     }
     .icone{
         display: flex;
