--- a/frontend/src/app/zoomvideo/zoomvideo.component.scss
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.scss
@@ -21,17 +21,44 @@ h2{
     padding-left: 1rem;
 }
 
-.btn{
-    background: $violetbouton;
-    position: absolute;
-    right: 2rem;
-    bottom: 2rem;
-    width: 10%;
+.dropbtn {
+    background-color: $violetbouton;
     color: white;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    transition: 0.3s;
-}
-
-.btn:hover{
-    background-color:$hoverbouton;
-}
+    padding: 0.5rem;
+    font-size: 16px;
+    border: none;
+    width: 200px;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: $boutongris;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: $hoverbouton;}
