--- a/frontend/src/app/playlistpage/playlistpage.component.scss
+++ b/frontend/src/app/playlistpage/playlistpage.component.scss
@@ -19,6 +19,9 @@ app-create-playlist{
     top: 2rem;
 }
 .grid {
+  img{
+    cursor: pointer;
+  }
     z-index: 0;
     padding-top: 1rem;
     padding-left: 1.5rem;
@@ -90,5 +93,5 @@ app-create-playlist{
     .card:hover{
         background-color: #AEAEAE;
     }
-    
+
 }
