--- a/frontend/src/app/playlist/playlist.component.html
+++ b/frontend/src/app/playlist/playlist.component.html
@@ -1,15 +1,17 @@
 <app-navbar></app-navbar>
 <h2>{{titleplaylist}} :</h2>
 <ng-container *ngFor="let video of playlist">
-    <a [routerLink]="['/video', video.id + '-' + video.provider]">
+    <a>
         <div class="card" >
-            <img class="photo" src={{video.thumbnail}}>
-            <h3>{{video.title}}</h3>
-            <p>{{video.channel}}</p>
-            <!-- <p>{{video.date}}</p> -->
+            <img [routerLink]="['/video', video.id + '-' + video.provider]" class="photo" src={{video.thumbnail}}>
+            <p>
+              {{video.title}} <br><br>
+              <i class="bi bi-person-fill"></i> {{video.channel}} <br><br>
+              <i class="bi bi-calendar"></i> Postée le {{video.date}} <br><br>
+            </p>
             <div class="icone">
                 <i class="bi bi-pencil-square"></i>
-                <i class="bi bi-trash"></i>
+                <app-delete-video (newItemEvent)="onDeleteVideo($event)" [videoId]=video.id [videoTitle] = video.title [playlistName]="titleplaylist"></app-delete-video>
             </div>
         </div>
     </a>
