--- a/frontend/src/app/playlistpage/playlistpage.component.html
+++ b/frontend/src/app/playlistpage/playlistpage.component.html
@@ -11,7 +11,7 @@
                 <img class="photo" src="../../assets/playlist_photo.jpg">
                 <p>{{playlist}}</p>
                 <div class="icone">
-                    <i class="bi bi-pencil-square"></i>
+                    <i (click)="OpenDialog(playlist)"class="bi bi-pencil-square"></i>
                     <i class="bi bi-trash"></i>
                 </div>
             </div>
