--- a/frontend/src/app/playlist/playlist.component.html
+++ b/frontend/src/app/playlist/playlist.component.html
@@ -8,7 +8,7 @@
             <p>{{video.channel}}</p>
             <!-- <p>{{video.date}}</p> -->
             <div class="icone">
-                <i class="bi bi-pencil-square"></i>
+                <!-- <i class="bi bi-pencil-square"></i> -->
                 <i class="bi bi-trash"></i>
             </div>
         </div>
