Chiffrement des mots de passes + meilleurs messages d'erreurs pour la partie user

--- a/frontend/src/app/inscription/inscription.component.html
+++ b/frontend/src/app/inscription/inscription.component.html
@@ -4,7 +4,7 @@
         <h2>WatchIt</h2>
     </div>
 
-    <div class="inscription"> 
+    <div class="inscription">
         <div class="inscription-container">
             <div class="form-group">
                 <input [(ngModel)]="email" class="form-control" id="exampleInputEmail1" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" type="email" placeholder="Email" required>
@@ -19,11 +19,10 @@
                 <input [(ngModel)]="lastName" type="lastName" class="form-control" id="exampleInputPassword1" placeholder="Nom de famille">
             </div>
             <div class="form-group">
-                <input [(ngModel)]="nationality" type="nationality" class="form-control" id="exampleInputPassword1" placeholder="Nationalite">
+                <input [(ngModel)]="nationality" type="nationality" class="form-control" id="exampleInputPassword1" placeholder="Nationalité">
             </div>
             <div style = "margin-top: 10px; margin-left: 10px" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
             <button (click)="affichage()" type="submit" class="btn btn-primary">S'inscrire</button>
         </div>
-    </div> 
+    </div>
 </div>
-  
