--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -1,9 +1,9 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <div class="profil"> 
+    <div class="profil">
         <h2>Informations personnelles :</h2>
         <div class="form-group">
-            <input [(ngModel)]="newFirstName" class="form-control" placeholder={{firstName}}>
+            <input [(ngModel)]="newFirstName" type="firstName" class="form-control" placeholder={{firstName}}>
         </div>
         <div class="form-group">
             <input [(ngModel)]="newLastName" type="lastName" class="form-control" placeholder={{lastName}}>
@@ -13,21 +13,21 @@
         </div>
         <div style = "margin-top: 10px;" *ngIf="errorMessagegauche.length!=0" class="alert alert-danger" role="alert">{{errorMessagegauche}}</div>
         <div style = "margin-top: 10px;" *ngIf="checkMessagegauche.length!=0" class="alert alert-success" role="alert">{{checkMessagegauche}}</div>
-        <button (click)="affichagegauche()" type="submit" class="btn btn-primary">Enregistrer</button>
-    </div> 
-    <div class="modifmdp"> 
+        <button (click)="modifierInfosPersos()" type="submit" class="btn btn-primary">Modifier</button>
+    </div>
+    <div class="modifmdp">
         <h2>Modification de mot de passe :</h2>
         <div class="form-group">
-            <input [(ngModel)]="oldPassword" class="form-control" id="exampleInputPassword1" type="password" placeholder="Ancien mot de passe" required>
+            <input [(ngModel)]="oldPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Ancien mot de passe">
         </div>
         <div class="form-group">
-            <input [(ngModel)]="newPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Nouveau mot de passe" required>
+            <input [(ngModel)]="newPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Nouveau mot de passe">
         </div>
         <div class="form-group">
-            <input [(ngModel)]="confnewpassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirmer mot de passe" required>
+            <input [(ngModel)]="confNewPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirmer le nouveau mot de passe">
         </div>
         <div style = "margin-top: 10px;" *ngIf="errorMessagedroit.length!=0" class="alert alert-danger" role="alert">{{errorMessagedroit}}</div>
         <div style = "margin-top: 10px;" *ngIf="checkMessagedroit.length!=0" class="alert alert-success" role="alert">{{checkMessagedroit}}</div>
-        <button (click)="affichagedroit()" type="submit" class="btn btn-primary">Enregistrer</button>
+        <button (click)="modifierMDP()" type="submit" class="btn btn-primary">Modifier</button>
     </div>
 </div>
