--- a/frontend/src/app/user/user.component.scss
+++ b/frontend/src/app/user/user.component.scss
@@ -13,7 +13,7 @@
     padding: 2rem;
     padding-right: 2rem;
     button{
-        width: 40%;
+        width: 45%;
         background-color: $violetbouton;
         border: none;
         margin-bottom: 1rem;
@@ -37,14 +37,14 @@
     }
     input::placeholder {
         color: $violetbouton;
-    }      
+    }
 }
 
 .modifmdp{
     width: 50%;
     padding: 2rem;
     button{
-        width: 40%;
+        width: 45%;
         background-color: $violetbouton;
         border: none;
         margin-bottom: 1rem;
@@ -68,7 +68,7 @@
     }
     input::placeholder {
         color: $violetbouton;
-    }      
+    }
 }
 h2{
     color: white;
@@ -83,4 +83,8 @@ h2{
         margin-bottom: 2rem;
         border-radius: 5px !important;
     }
+}
+
+.alert{
+  width: 45%;
 }
