Login + page video ok

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,6 +2,9 @@
     <div class="logo">
         <img src="../../assets/Image1.png">
         <h2>WatchIt</h2>
+        <div class="annonce">
+            <h1>Créez, modifiez, visionnez vos playlists réunissant des vidéos Youtube et Vimeo !</h1>
+        </div>
     </div>
 
     <div class="connexion"> 
