--- a/frontend/src/app/playlist/playlist.component.scss
+++ b/frontend/src/app/playlist/playlist.component.scss
@@ -6,6 +6,7 @@
 h2{
     padding: 2rem;
     color: white;
+    font-size: 30px;
 }
 a{
     color: black;
@@ -21,6 +22,7 @@ a{
     margin-bottom: 2rem;
     transition: 0.3s;
     img.photo{
+        cursor: pointer;
         position: absolute;
         left: 2rem;
         margin-top: 2rem;
@@ -30,20 +32,40 @@ a{
         border: solid 1px black;
         cursor: pointer;
     }
-    p{
+    p.title{
       position: absolute;
       left: 400px;
-      bottom: 30%;
-      font-size: 20px;
+      bottom: 45%;
+      font-size: 25px;
+      line-height: 1.3;
+    }
+    .channel{
+        display: flex;
+        position: absolute;
+        left: 400px;
+        bottom: 13%;
+        .bi{
+            margin-right: 0.5rem;
+        }
+    }
+    .date{
+        display:flex;
+        position: absolute;
+        left: 400px;
+        bottom: 3%;
+        .bi{
+            margin-right: 0.5rem;
+        }
     }
     .icone{
         display: flex;
         width: 100%;
         height: 20%;
-        position: relative;
-    }
-    .bi{
         position: absolute;
+        top: -1rem;
+    }
+    .bi-trash{
+        // position: absolute;
         border: solid 1px black;
         border-radius: 50%;
         padding-top: 2px;
@@ -52,18 +74,6 @@ a{
         padding-left: 4px;
         background-color: white;
         font-size: 15px;
-    }
-    .bi-pencil-square{
-        right: 2.5rem;
-        bottom: 0.5rem;
-    }
-    .bi-pencil-square:hover{
-        background-color: $violetbouton;
-        color: white;
-    }
-    .bi-trash{
-        right: 0.5rem;
-        bottom: 0.5rem;
     }
     .bi-trash:hover{
         background-color: $violetbouton;
