--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -11,13 +11,8 @@
 }
 
 div.logo{
-<<<<<<< HEAD
     width: 60%;
     
-=======
-    width: 50%;
-
->>>>>>> main
     img{
         width: 70px;
         height: auto;
@@ -35,6 +30,7 @@ div.logo{
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             width: 90%;
             margin: auto;
+            font-size: 25px;
         }
     }
 }
