--- a/frontend/src/app/zoomvideo/zoomvideo.component.html
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.html
@@ -1,5 +1,30 @@
 <app-navbar></app-navbar>
 <div class="zoom_video">
+    <iframe title="YouTube" width="990" height="530" [src]="getSafeURL()" frameborder="0" allowfullscreen></iframe>
+    <div class="description">
+      <h2>Description :</h2>
+      <p>{{videozoom.description}}</p>
+    </div>
+</div>
+<div class="bloc_right">
+  <div class="infoVideo">
+    <h2 class="title">{{videozoom.title}}</h2>
+  </div>
+  <div class="barre">
+    <div class="channel"><i class="bi bi-person-fill"></i> <p>{{videozoom.channel}} </p></div>
+    <div class="date"><i class="bi bi-calendar"></i> <p>Postée le {{videozoom.date}}</p></div>
+    <div class="dropdown">
+      <button class="dropbtn btn my-2 my-sm-0" type="submit">Ajouter</button>
+      <div class="dropdown-content">
+        <a *ngFor="let playlist of playlists" (click)="addVideo(playlist)">{{playlist}}</a>
+      </div>
+    </div> 
+  </div>
+</div>
+
+
+<!-- <app-navbar></app-navbar>
+<div class="zoom_video">
     <iframe title="YouTube" width="950" height="500" [src]="getSafeURL()" frameborder="0" allowfullscreen></iframe>
     <div class="bloc_right">
         <div class="dropdown">
@@ -7,7 +32,15 @@
             <div class="dropdown-content">
               <a *ngFor="let playlist of playlists" (click)="addVideo(playlist)">{{playlist}}</a>
             </div>
-          </div> 
-        <h2>{{videozoom.title}}</h2>
+        </div> 
+        <div class="infoVideo">
+          <p class="title">{{videozoom.title}}</p>
+          <div class="channel"><i class="bi bi-person-fill"></i> <p>{{videozoom.channel}} </p></div>
+          <div class="date"><i class="bi bi-calendar"></i> <p>Postée le {{videozoom.date}}</p></div>
+        </div>
     </div>
 </div>
+<div class="description">
+  <h2>Description :</h2>
+  <p>{{videozoom.description}}</p>
+</div> -->
