--- a/frontend/src/app/zoomvideo/zoomvideo.component.scss
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.scss
@@ -1,4 +1,5 @@
 @import "../../variable.scss";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
 .zoom_video{
     display: flex;
@@ -11,55 +12,136 @@
         margin-right: 1rem;
         box-shadow: $boutongris 0px 5px 15px;
     }
+    .description{
+      height: 530px;
+      overflow: hidden;
+      display: block;
+      color: white;
+      width: 35%;
+      p,h2{
+        width: 90%;
+        margin : auto;
+      }
+      h2{
+        margin-bottom: 1rem;
+      }
+    }
 }
 
-h2{
-    position: absolute;
-    width: 35%;
-    color: white;
-    bottom: 40%;
-    right: 0;
-    padding-left: 1rem;
+.bloc_right{
+  display: block;
+  color: white;
+  .infoVideo{
+    width: 100%;
+    h2{
+      margin-left: 2rem;
+    }
+  }
+  .barre{
+    margin-left: 2rem;
+    padding-top: 1rem;
+    width: 60%;
+    border-top: 1px solid white;
+    display: flex;
+    .channel{
+      display: flex;
+      width: 30%;
+      i{
+        margin-right: 0.5rem;
+      }
+
+    }
+    .date{
+      display: flex;
+      width: 50%;
+      i{
+        margin-right: 0.5rem;
+      }
+
+    }
+    .dropbtn {
+      background-color: $violetbouton;
+      color: white;
+      padding: 0.5rem;
+      font-size: 16px;
+      border: none;
+      width: 200px
+    }
+    
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      right: 0;
+      bottom: 2.5rem;
+      // right: -160px;
+      // bottom: 0;
+    }
+    
+    /* Links inside the dropdown */
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      cursor: pointer;
+    }
+    
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: $boutongris;}
+    
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {display: block;}
+    
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown:hover .dropbtn {background-color: $hoverbouton;}
+  
+  }
 }
 
-.dropbtn {
-    background-color: $violetbouton;
-    color: white;
-    padding: 0.5rem;
-    font-size: 16px;
-    border: none;
-    width: 200px;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: $boutongris;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: $hoverbouton;}
+
+// .bloc_right .infoVideo{
+//   display: block;
+//   background-color: yellow;
+//   color: white;
+//   p.title{
+//     position: absolute;
+//     bottom: 13%;
+//     left: 2rem;
+//     font-size: 25px;
+//     line-height: 1.3;
+//   }
+// }
+// .barre{
+//   display: flex;
+//   color: white;
+//   border-top: 1px solid white;
+//   .channel{
+//       display: flex;
+//       position: absolute;
+//       left:2rem;
+//       bottom: 8%;
+//       .bi{
+//           margin-right: 0.5rem;
+//       }
+//   }
+//   .date{
+//       display:flex;
+//       position: absolute;
+//       left: 13%;
+//       bottom: 8%;
+//       .bi{
+//           margin-right: 0.5rem;
+//       }
+//   }
+// }
