--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -85,3 +85,15 @@
         height: 220px;
     }
 }
+
+.customPaginator {
+  margin-top: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  li{
+    margin-right: 10px;
+  }
+}
