Spinner sur la page de recherche + paginateur + composant home retiré

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-light">
-    <a [routerLink]="['/home']" class="navbar-brand" href="#">
+    <a [routerLink]="['/search']" class="navbar-brand" href="#">
         <img src="../../assets/Image1.png" width="30" height="30" class="d-inline-block align-top" alt="">
         <p>WatchIt</p>
     </a>
@@ -8,6 +8,6 @@
         <a [routerLink]="['/playlistpage']"><i class="bi bi-music-note-list"></i></a>
         <a [routerLink]="['/userpage']"><i class="bi bi-person-fill"></i></a>
     </div>
-    
+
 </nav>
 
