--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -87,13 +87,28 @@
 }
 
 .customPaginator {
-  margin-top: 15px;
+  margin-top: 25px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
   li{
-    margin-right: 10px;
+    margin-right: 20px;
   }
+
+  .page-link{
+    border: 5px;
+    border-radius: 10px;
+    background-color: #702DFF;
+    color: white;
+    cursor: pointer;
+  }
+}
+
+.divSpinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 250px;
 }
