--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -13,7 +13,21 @@
     </div>
 
 </nav>
-<div class="grid">
+
+<div *ngIf="showSpinner" class = "divSpinner">
+  <mat-spinner></mat-spinner>
+</div>
+
+
+<nav *ngIf = "showPaginator" aria-label="..."class = "customPaginator">
+  <ul class="pagination pagination-sm">
+    <li class="page-item" *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+      <a class="page-link" (click)="getVideos(i)">{{i}}</a>
+    </li>
+  </ul>
+</nav>
+
+<div class="grid" *ngIf = "showVideos">
     <ng-container *ngFor="let video of listeVideos">
         <a [routerLink]="['/video', video.id + '_' + video.provider]" class="stretched-link">
             <img src={{video.thumbnail}}>
@@ -22,10 +36,11 @@
     </ng-container>
 </div>
 
-<nav aria-label="..."class = "customPaginator">
+<nav *ngIf = "showPaginator" aria-label="..."class = "customPaginator">
   <ul class="pagination pagination-sm">
     <li class="page-item" *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
       <a class="page-link" (click)="getVideos(i)">{{i}}</a>
     </li>
   </ul>
 </nav>
+
