--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -84,6 +84,11 @@
         width: 320px;
         height: 220px;
     }
+    p{
+        width: 90%;
+        word-wrap: anywhere;
+        margin-top: 0.3rem;
+    }
 }
 
 .customPaginator {
