--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -5,6 +5,7 @@
     z-index: 10;
     justify-content: left;
     background: linear-gradient(#702DFF,#937AC9);
+  cursor: pointer;
     a{
         display: flex;
         p{
