--- a/frontend/src/app/annonce/annonce.component.html
+++ b/frontend/src/app/annonce/annonce.component.html
@@ -20,13 +20,11 @@
       <div class="row">
         <div class="col-md-6 m-auto">
           <h1 class="text-center display-4 my-4">Mongo File Uploads</h1>
-          <form action="http://localhost:3003/bow" method="POST" enctype="multipart/form-data">
-            <div class="custom-file mb-3">
-              <input type="file" name="file" id="file" class="custom-file-input">
-              <label for="file" class="custom-file-label">Choose File</label>
-            </div>
-            <input type="submit" value="Submit" class="btn btn-primary btn-block">
-          </form>
+          <div class="custom-file mb-3">
+            <input (change) = "onFileSelected($event)" type="file" name="file" id="file" class="custom-file-input">
+            <label for="file" class="custom-file-label">Choose File</label>
+          </div>
+          <input (click) = "uploadImage()" type="submit" value="Submit" class="btn btn-primary btn-block">
       </div>
     </div>
     </div>
