--- a/frontend/src/app/advertspage/advertspage.component.scss
+++ b/frontend/src/app/advertspage/advertspage.component.scss
@@ -1,97 +1,82 @@
 @import "../../variable.scss";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
 .stretched-link::after {
     position: relative;
 }
-
 h2{
-    font-size: 30px;
     padding: 2rem;
     color: white;
+    font-size: 30px;
 }
-.haut{
-    display: flex;
-    position: relative;
+a{
+    color: black;
 }
-app-create-advert{
-    position: absolute;
-    right: 2rem;
-    top: 2rem;
-}
-.grid {
-  img{
-    cursor: pointer;
-  }
-    z-index: 0;
-    padding-top: 1rem;
-    padding-left: 1.5rem;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 0.8fr 0.8fr 0.8fr; /* Create 2 columns and auto-place rows */
-    ng-container{
-        display: block;
-    }
-    a{
-        margin-bottom: 2rem;
-        color: black;
-    }
-    a:hover{
-        text-decoration: none;
-    }
-    .card{
+.cardadvert{
+    display: flex !important;
+    margin: auto;
+    width: 60%;
+    height: 40%;
+    background-color: $boutongris;
+    border-radius: 10px;
+    // border: solid 2px $violetbouton;
+    box-shadow: $violetbouton 0px 5px 15px;
+    margin-bottom: 2rem;
+    transition: 0.3s;
+    .containerPhoto{
+        width: 50%;
         display: flex;
-        align-content: center;
-        align-items: center;
-        text-align: center;
-        width: 80%;
-        height: 300px;
-        background-color: $boutongris;
-        border-radius: 10px;
-        border: solid 2px $violetbouton;
-        transition: 0.3s;
         img.photo{
-            margin-top: 2rem;
-            margin-bottom: 2rem;
-            width: 70%;
-            height: auto;
+            margin: auto;
+            cursor: pointer;
+            // margin-top: 3rem;
+            // margin-bottom: 3rem;
+            height:auto;
+            max-width: 80%;
+            max-height: 70%;
             border: solid 1px black;
-        }
-        .icone{
-            display: flex;
-            width: 100%;
-            height: 20%;
-            position: relative;
-        }
-        .bi{
-            position: absolute;
-            border: solid 1px black;
-            border-radius: 50%;
-            padding-top: 2px;
-            padding-bottom: 2px;
-            padding-right: 4px;
-            padding-left: 4px;
-            background-color: white;
-            font-size: 15px;
-        }
-        .bi-pencil-square{
-            right: 2.5rem;
-            bottom: 0.5rem;
-        }
-        .bi-pencil-square:hover{
-            background-color: $violetbouton;
-            color: white;
-        }
-        .bi-trash{
-            right: 0.5rem;
-            bottom: 0.5rem;
-        }
-        .bi-trash:hover{
-            background-color: $violetbouton;
-            color: white;
+            cursor: pointer;
         }
     }
-    .card:hover{
-        background-color: #AEAEAE;
+    .infoVideo{
+        width: 50%;
+        p.title{
+            margin-top: 3rem;
+            font-size: 25px;
+            line-height: 1.3;
+          }
+          .description{
+              width: 90%;
+              display: flex;
+              .bi{
+                  margin-right: 0.5rem;
+              }
+          }
     }
-
+    
+    .icone{
+        display: flex;
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        top: -1rem;
+    }
+    .bi-trash{
+        // position: absolute;
+        border: solid 1px black;
+        border-radius: 50%;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-right: 4px;
+        padding-left: 4px;
+        background-color: white;
+        font-size: 15px;
+    }
+    .bi-trash:hover{
+        background-color: $violetbouton;
+        color: white;
+    }
+}
+.card:hover{
+    background-color: #AEAEAE;
 }
