--- a/frontend/src/app/delete-advert-dialog/delete-advert-dialog.component.html
+++ b/frontend/src/app/delete-advert-dialog/delete-advert-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div mat-dialog-content>
-      <h1>Voulez-vous vraiment supprimer {{AdvertTitle}} ?</h1>
+      <h1>Voulez-vous vraiment supprimer votre annonce {{advertTitle}} ?</h1>
     </div>
     <div mat-dialog-actions>
       <button mat-button (click)="onNoClick()">Annuler</button>
