--- a/frontend/src/app/edit-advert-dialog/edit-advert-dialog.component.html
+++ b/frontend/src/app/edit-advert-dialog/edit-advert-dialog.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div mat-dialog-content>
       <h1>Rentrez le nouveau nom de l'annonce :</h1>
-      <input class = "form-control" [(ngModel)]="nom_nouvelle_advert">
+      <input class = "form-control" [(ngModel)]="nouveauNomAnnonce">
       <div style = "margin-top: 20px;" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
     </div>
     <div mat-dialog-content>
         <h1>Rentrez la nouvelle description de l'annonce :</h1>
-        <input class = "form-control" [(ngModel)]="nouvelle_description">
+        <input class = "form-control" [(ngModel)]="nouvelleDescription">
         <div style = "margin-top: 20px;" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
       </div>
     <div mat-dialog-actions>
