--- a/frontend/src/app/edit-advert-dialog/edit-advert-dialog.component.html
+++ b/frontend/src/app/edit-advert-dialog/edit-advert-dialog.component.html
@@ -1,16 +1,21 @@
 <div class="container">
     <div mat-dialog-content>
       <h1>Rentrez le nouveau nom de l'annonce :</h1>
-      <input class = "form-control" [(ngModel)]="nouveauNomAnnonce">
-      <div style = "margin-top: 20px;" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
+      <input [placeholder]="placeholderTitle" class = "form-control" [(ngModel)]="nouveauNomAnnonce">
     </div>
     <div mat-dialog-content>
         <h1>Rentrez la nouvelle description de l'annonce :</h1>
-        <input class = "form-control" [(ngModel)]="nouvelleDescription">
-        <div style = "margin-top: 20px;" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
-      </div>
+        <input [placeholder]="placeholderDescription" class = "form-control" [(ngModel)]="nouvelleDescription">
+    </div>
+    <div mat-dialog-content>
+      <h1>Séléctionnez la nouvelle image de l'annonce :</h1>
+      <input (change) = "onFileSelected($event)" type="file" class="form-control" type="file" id="formFile">
+    </div>
     <div mat-dialog-actions>
+      <div style = "margin-top: 20px;" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
       <button mat-button (click)="onNoClick()">Annuler</button>
       <button mat-button (click)="onClick()">Modifier</button>
     </div>
 </div>
+
+<mat-spinner *ngIf="onSendRequest"></mat-spinner>
