--- a/frontend/src/app/edit-advert-dialog/edit-advert-dialog.component.scss
+++ b/frontend/src/app/edit-advert-dialog/edit-advert-dialog.component.scss
@@ -2,11 +2,12 @@
 
 .container{
   padding: 1rem;
+  background: linear-gradient(#702DFF,#937AC9);
 }
 h1
 {
   font-size: 18px;
-  color: black;
+  color: white;
 }
 
 .form-control
@@ -16,6 +17,10 @@ h1
   margin-top: 10px;
   height : 35px;
   margin-bottom: 1rem;
+}
+
+.form-control::placeholder {
+  color: $violetbouton;
 }
 
 .mat-dialog-actions{
